--- a/backend/api/api.csproj
+++ b/backend/api/api.csproj
@@ -19,4 +19,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Dtos/Role/" />
+    <Folder Include="Dtos/User/" />
+  </ItemGroup>
+
 </Project>
